# Fantasy_synthetic_lab

./: .gitignore  Lab_AML.ipynb  Lab_AML_modular.ipynb  Lab_AML_original.ipynb  Lab_aml_presentation.ipynb  README.md  edits.ipynb  full.ipynb  hello.py  mission1_synthetic_data.csv  pyproject.toml  ragchatbot.py
fantasy_aml/: __init__.py  notebook_bridge.py  runners.py
mission2_documents/: Mission2_Investigation_Summary.txt  mission2_summary.txt
mission3_results/: mission3_results_20250902_011018.json
